--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -24,7 +24,7 @@
         android:layout_height="60dp"
         android:layout_marginBottom="76dp"
         android:layout_marginStart="16dp"
-        android:text="@string/see_who_i_monitor"
+        android:text="Parents Dashboard"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -57,18 +57,6 @@
         android:text="@string/manage_groups"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
-    <Button
-        android:id="@+id/parentDashBtn"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:text="@string/parents_dashboard"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.068"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.68" />
 
     <TextView
         android:id="@+id/greeting"
