--- a/app/src/main/res/layout/activity_parents_dashboard.xml
+++ b/app/src/main/res/layout/activity_parents_dashboard.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="project.cmpt276.androidui.walkingschoolbus.WhoIMonitor"
-    tools:layout_editor_absoluteY="81dp"
-    android:background="@drawable/background">
+    android:background="@drawable/background"
+    tools:context="project.cmpt276.androidui.walkingschoolbus.ParentsDashboardActivity"
+    tools:layout_editor_absoluteY="81dp">
 
     <TextView
         android:id="@+id/currentMonitoringView"
@@ -59,16 +59,6 @@
         app:layout_constraintStart_toEndOf="@+id/addSomeoneToMonitorEdit"
         app:layout_constraintTop_toBottomOf="@+id/currentlyMonitoringList" />
 
-    <Button
-        android:id="@+id/returnMainMenuBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginStart="8dp"
-        android:text="@string/return_to_main_menu"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <TextView
         android:id="@+id/stopMonitoringView"
         android:layout_width="wrap_content"
@@ -105,4 +95,28 @@
         android:text="@string/press_a_user_to_remove_them_from_a_group"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnViewUsersOnMap"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:text="View Users Location"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.07"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.964" />
+
+    <Button
+        android:id="@+id/btnParentMail"
+        android:layout_width="157dp"
+        android:layout_height="50dp"
+        android:text="Messages"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.929"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.964" />
 </android.support.constraint.ConstraintLayout>
