--- a/app/src/main/res/layout/activity_send_user_message.xml
+++ b/app/src/main/res/layout/activity_send_user_message.xml
@@ -42,13 +42,25 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btnUserSend"
-        android:layout_width="115dp"
-        android:layout_height="67dp"
-        android:text="@string/send_message"
+        android:id="@+id/btnUserSendGroupLeader"
+        android:layout_width="166dp"
+        android:layout_height="wrap_content"
+        android:text="@string/send_message_to_group_leader"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.94"
+        app:layout_constraintHorizontal_bias="0.059"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.963" />
+
+    <Button
+        android:id="@+id/btnUserSendParents"
+        android:layout_width="166dp"
+        android:layout_height="wrap_content"
+        android:text="@string/send_message_to_parents"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.926"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.964" />
