--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -24,7 +24,7 @@
         android:id="@+id/createEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="17dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="@string/enter_your_email"
         android:inputType="textEmailAddress"
@@ -35,12 +35,15 @@
         android:id="@+id/createPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
+        android:layout_marginBottom="14dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="17dp"
         android:ems="10"
         android:hint="@string/create_your_password"
         android:inputType="textPersonName"
-        app:layout_constraintStart_toStartOf="@+id/createEmail"
-        app:layout_constraintTop_toBottomOf="@+id/createEmail" />
+        app:layout_constraintBottom_toTopOf="@+id/errorMessages"
+        app:layout_constraintEnd_toStartOf="@+id/nextStepSignUp"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/join"
@@ -57,7 +60,7 @@
         android:id="@+id/errorMessages"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="21dp"
+        android:layout_marginBottom="111dp"
         android:layout_marginEnd="34dp"
         android:layout_marginStart="35dp"
         android:textColor="@android:color/holo_red_dark"
@@ -65,18 +68,40 @@
         app:layout_constraintBottom_toTopOf="@+id/join"
         app:layout_constraintEnd_toEndOf="@+id/join"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/accountCreationInstructions" />
+        app:layout_constraintTop_toBottomOf="@+id/nextStepSignUp" />
 
     <TextView
         android:id="@+id/accountCreationInstructions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="242dp"
+        android:layout_marginBottom="157dp"
         android:layout_marginStart="35dp"
         android:layout_marginTop="25dp"
         android:text="@string/please_enter_your_credentials"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/errorMessages"
+        app:layout_constraintBottom_toTopOf="@+id/nextStepSignUp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/nextStepSignUp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
+        android:text="next"
+        app:layout_constraintBottom_toTopOf="@+id/errorMessages"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/createPassword"
+        app:layout_constraintTop_toBottomOf="@+id/accountCreationInstructions" />
+
+    <CheckBox
+        android:id="@+id/setUserType"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="31dp"
+        android:text="Im a parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/errorMessages" />
+
 </android.support.constraint.ConstraintLayout>
