--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -10,32 +10,41 @@
 
     <Button
         android:id="@+id/goToMap"
-        android:layout_width="150dp"
+        android:layout_width="0dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="76dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="60dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginTop="60dp"
         android:text="@string/map"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/manageGroupsBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/whoIMonitorBtn"
+        app:layout_constraintTop_toTopOf="@+id/btnMessagingActivity" />
 
     <Button
         android:id="@+id/whoIMonitorBtn"
-        android:layout_width="150dp"
+        android:layout_width="0dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="76dp"
+        android:layout_marginBottom="60dp"
+        android:layout_marginEnd="62dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="60dp"
         android:text="@string/see_who_i_monitor"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/whoMonitorsMeBtn"
+        app:layout_constraintEnd_toStartOf="@+id/goToMap"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btnMessagingActivity" />
 
     <Button
         android:id="@+id/whoMonitorsMeBtn"
-        android:layout_width="150dp"
+        android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginBottom="16dp"
+        android:layout_marginEnd="62dp"
         android:layout_marginStart="16dp"
         android:text="@string/see_who_monitors_me"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/manageGroupsBtn"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -50,37 +59,51 @@
 
     <Button
         android:id="@+id/manageGroupsBtn"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="15dp"
         android:text="@string/manage_groups"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/whoMonitorsMeBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/whoMonitorsMeBtn"
+        app:layout_constraintTop_toBottomOf="@+id/whoIMonitorBtn" />
 
     <TextView
         android:id="@+id/greeting"
-        android:layout_width="355dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="73dp"
+        android:layout_width="0dp"
+        android:layout_height="114dp"
+        android:layout_marginBottom="129dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="110dp"
         android:text="@string/welcome_to_the_walking_school_bus_app"
         android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/btnMessagingActivity"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnMessagingActivity"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="136dp"
         android:text="Messages"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.931"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.698" />
+        app:layout_constraintEnd_toEndOf="@+id/goToMap"
+        app:layout_constraintStart_toStartOf="@+id/goToMap"
+        app:layout_constraintTop_toBottomOf="@+id/greeting" />
+
+    <Button
+        android:id="@+id/editInfoBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="38dp"
+        android:layout_marginBottom="19dp"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="16dp"
+        android:text="Edit my Info"
+        app:layout_constraintBottom_toTopOf="@+id/greeting"
+        app:layout_constraintStart_toEndOf="@+id/logoutBtn"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
