--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -12,40 +12,40 @@
         android:id="@+id/goToMap"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="60dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginBottom="57dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="62dp"
         android:text="@string/map"
         app:layout_constraintBottom_toBottomOf="@+id/manageGroupsBtn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/whoIMonitorBtn"
+        app:layout_constraintStart_toEndOf="@+id/whoMonitorsMeBtn"
         app:layout_constraintTop_toTopOf="@+id/btnMessagingActivity" />
 
     <Button
         android:id="@+id/whoIMonitorBtn"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="60dp"
-        android:layout_marginEnd="62dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginBottom="36dp"
+        android:layout_marginTop="33dp"
         android:text="@string/see_who_i_monitor"
-        app:layout_constraintBottom_toBottomOf="@+id/whoMonitorsMeBtn"
-        app:layout_constraintEnd_toStartOf="@+id/goToMap"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/manageGroupsBtn"
+        app:layout_constraintEnd_toEndOf="@+id/whoMonitorsMeBtn"
+        app:layout_constraintStart_toStartOf="@+id/whoMonitorsMeBtn"
         app:layout_constraintTop_toTopOf="@+id/btnMessagingActivity" />
 
     <Button
         android:id="@+id/whoMonitorsMeBtn"
         android:layout_width="0dp"
-        android:layout_height="60dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="16dp"
-        android:layout_marginEnd="62dp"
+        android:layout_marginEnd="57dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:text="@string/see_who_monitors_me"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/manageGroupsBtn"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/goToMap"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/whoIMonitorBtn" />
 
     <Button
         android:id="@+id/logoutBtn"
@@ -60,50 +60,44 @@
     <Button
         android:id="@+id/manageGroupsBtn"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="15dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/manage_groups"
-        app:layout_constraintBottom_toBottomOf="@+id/whoMonitorsMeBtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/whoMonitorsMeBtn"
-        app:layout_constraintTop_toBottomOf="@+id/whoIMonitorBtn" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/editInfoBtn"
+        app:layout_constraintStart_toStartOf="@+id/goToMap" />
 
     <TextView
         android:id="@+id/greeting"
         android:layout_width="0dp"
-        android:layout_height="114dp"
-        android:layout_marginBottom="129dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="110dp"
+        android:layout_marginTop="98dp"
         android:text="@string/welcome_to_the_walking_school_bus_app"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/btnMessagingActivity"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnMessagingActivity"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="136dp"
+        android:layout_width="177dp"
+        android:layout_height="48dp"
+        android:layout_marginBottom="147dp"
+        android:layout_marginEnd="16dp"
         android:text="Messages"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/goToMap"
-        app:layout_constraintStart_toStartOf="@+id/goToMap"
-        app:layout_constraintTop_toBottomOf="@+id/greeting" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/editInfoBtn"
         android:layout_width="wrap_content"
-        android:layout_height="38dp"
-        android:layout_marginBottom="19dp"
-        android:layout_marginStart="19dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="15dp"
         android:text="Edit my Info"
-        app:layout_constraintBottom_toTopOf="@+id/greeting"
-        app:layout_constraintStart_toEndOf="@+id/logoutBtn"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/logoutBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/logoutBtn" />
 
 </android.support.constraint.ConstraintLayout>
