fixed UI alignment issues

--- a/app/src/main/res/layout/activity_parents_dashboard.xml
+++ b/app/src/main/res/layout/activity_parents_dashboard.xml
@@ -90,10 +90,11 @@
         android:id="@+id/pressUserView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="64dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
         android:text="@string/press_a_user_to_remove_them_from_a_group"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
