--- a/app/src/main/res/layout/activity_edit_user_info.xml
+++ b/app/src/main/res/layout/activity_edit_user_info.xml
@@ -12,12 +12,13 @@
         android:id="@+id/editGreeting"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginBottom="146dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:text="Edit Your Info"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/updateCellNumber"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.003"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,11 +26,11 @@
         android:id="@+id/updateAddress"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
         android:ems="10"
         android:hint="New Address"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/updateHomeNumber"
-        app:layout_constraintEnd_toEndOf="@+id/updateName"
+        app:layout_constraintEnd_toEndOf="@+id/updateHomeNumber"
         app:layout_constraintStart_toStartOf="@+id/updateHomeNumber"
         app:layout_constraintTop_toBottomOf="@+id/updateName" />
 
@@ -46,16 +47,16 @@
 
     <EditText
         android:id="@+id/updateHomeNumber"
-        android:layout_width="238dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="56dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginBottom="3dp"
         android:ems="10"
         android:hint="New Home Phone Number"
         android:inputType="number"
-        app:layout_constraintBottom_toTopOf="@+id/updateGrade"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/updateAddress" />
+        app:layout_constraintBottom_toTopOf="@+id/updateCellNumber"
+        app:layout_constraintEnd_toEndOf="@+id/updateCellNumber"
+        app:layout_constraintStart_toStartOf="@+id/updateCellNumber"
+        app:layout_constraintTop_toBottomOf="@+id/updateName" />
 
     <EditText
         android:id="@+id/updateCellNumber"
@@ -65,22 +66,21 @@
         android:hint="New Cellphone Number"
         android:inputType="number"
         app:layout_constraintBottom_toTopOf="@+id/updateTeacher"
-        app:layout_constraintEnd_toStartOf="@+id/updateYear"
-        app:layout_constraintStart_toStartOf="@+id/updateHomeNumber"
-        app:layout_constraintTop_toBottomOf="@+id/editGreeting" />
+        app:layout_constraintEnd_toStartOf="@+id/updateGrade"
+        app:layout_constraintStart_toStartOf="@+id/updateTeacher"
+        app:layout_constraintTop_toBottomOf="@+id/updateHomeNumber" />
 
     <EditText
         android:id="@+id/updateTeacher"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="17dp"
-        android:layout_marginEnd="9dp"
         android:layout_marginStart="16dp"
         android:ems="10"
         android:hint="New Teacher's Name"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/updateBirthDay"
         app:layout_constraintEnd_toStartOf="@+id/updateGrade"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/updateCellNumber" />
 
@@ -88,32 +88,29 @@
         android:id="@+id/updateBirthDay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="18dp"
-        android:layout_marginStart="16dp"
-        android:text="Edit Birth Day (MM/YY)"
+        android:text=" Edit Birth Day (MM/YY)"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/updateMonth"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/updateTeacher"
         app:layout_constraintTop_toBottomOf="@+id/updateTeacher" />
 
     <EditText
         android:id="@+id/updateEmergencyInfo"
-        android:layout_width="0dp"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="79dp"
+        android:layout_marginBottom="121dp"
+        android:layout_marginLeft="16dp"
         android:ems="10"
         android:hint="New Emergency Info"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/updateTeacher"
-        app:layout_constraintStart_toStartOf="@+id/updateMonth"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/updateMonth" />
 
     <Spinner
         android:id="@+id/updateMonth"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:layout_marginEnd="14dp"
         android:layout_marginStart="16dp"
         app:layout_constraintBottom_toTopOf="@+id/updateEmergencyInfo"
         app:layout_constraintEnd_toStartOf="@+id/updateYear"
@@ -124,8 +121,8 @@
         android:id="@+id/updateYear"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="76dp"
-        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="103dp"
+        android:layout_marginEnd="74dp"
         app:layout_constraintBottom_toTopOf="@+id/doneBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/updateMonth"
@@ -133,26 +130,28 @@
 
     <Spinner
         android:id="@+id/updateGrade"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="54dp"
-        android:layout_marginEnd="2dp"
+        android:layout_width="109dp"
+        android:layout_height="38dp"
+        android:layout_marginBottom="27dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="239dp"
         app:layout_constraintBottom_toTopOf="@+id/updateYear"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toEndOf="@+id/updateTeacher"
-        app:layout_constraintTop_toBottomOf="@+id/updateHomeNumber" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/updateName"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="1dp"
-        android:layout_marginTop="62dp"
+        android:layout_marginBottom="46dp"
         android:ems="10"
         android:hint="New Name"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/updateAddress"
-        app:layout_constraintEnd_toEndOf="@+id/editGreeting"
-        app:layout_constraintStart_toEndOf="@+id/editGreeting"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/updateHomeNumber"
+        app:layout_constraintEnd_toEndOf="@+id/updateAddress"
+        app:layout_constraintStart_toStartOf="@+id/updateAddress"
+        app:layout_constraintTop_toBottomOf="@+id/editGreeting" />
 </android.support.constraint.ConstraintLayout>
