--- a/app/src/main/res/layout/activity_sign_up_optional_info.xml
+++ b/app/src/main/res/layout/activity_sign_up_optional_info.xml
@@ -12,12 +12,10 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="53dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="Optional Info"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/phoneNumber"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,98 +23,85 @@
         android:id="@+id/getAddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="86dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:hint="Address"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/grade"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
         android:id="@+id/teachersName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginTop="45dp"
         android:ems="10"
         android:hint="Teacher's Name"
         android:inputType="textEmailAddress|textPersonName"
-        app:layout_constraintEnd_toStartOf="@+id/grade"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/grade" />
+        app:layout_constraintEnd_toEndOf="@+id/cellNumber"
+        app:layout_constraintStart_toStartOf="@+id/cellNumber"
+        app:layout_constraintTop_toTopOf="@+id/cellNumber" />
 
     <Spinner
         android:id="@+id/months"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="18dp"
-        android:layout_marginEnd="21dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/emergencyInfo"
+        android:layout_marginTop="24dp"
         app:layout_constraintEnd_toStartOf="@+id/years"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/birthDay" />
+        app:layout_constraintStart_toStartOf="@+id/birthDay"
+        app:layout_constraintTop_toTopOf="@+id/birthDay" />
 
     <EditText
         android:id="@+id/phoneNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="41dp"
         android:ems="10"
         android:hint="Home Phone Number"
         android:inputType="number"
-        app:layout_constraintBottom_toTopOf="@+id/cellNumber"
         app:layout_constraintStart_toStartOf="@+id/getAddress"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toTopOf="@+id/getAddress" />
 
     <EditText
         android:id="@+id/cellNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="44dp"
+        android:layout_marginTop="45dp"
         android:ems="10"
         android:hint="Cellphone Number"
         android:inputType="number"
-        app:layout_constraintBottom_toTopOf="@+id/birthDay"
         app:layout_constraintStart_toStartOf="@+id/phoneNumber"
-        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />
+        app:layout_constraintTop_toTopOf="@+id/phoneNumber" />
 
     <Spinner
         android:id="@+id/grade"
-        android:layout_width="158dp"
+        android:layout_width="129dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="217dp"
-        android:layout_marginEnd="66dp"
-        android:layout_marginTop="184dp"
-        app:layout_constraintBottom_toTopOf="@+id/join2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/birthDay"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/teachersName"
+        app:layout_constraintStart_toEndOf="@+id/cellNumber"
+        app:layout_constraintTop_toTopOf="@+id/teachersName" />
 
     <Spinner
         android:id="@+id/years"
-        android:layout_width="126dp"
+        android:layout_width="142dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="18dp"
-        android:layout_marginStart="18dp"
-        app:layout_constraintBottom_toTopOf="@+id/emergencyInfo"
-        app:layout_constraintStart_toStartOf="@+id/grade" />
+        android:layout_marginEnd="60dp"
+        app:layout_constraintEnd_toEndOf="@+id/grade"
+        app:layout_constraintTop_toTopOf="@+id/months" />
 
     <TextView
         android:id="@+id/birthDay"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="34dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
-        android:text="Birthday (MM/YY)"
+        android:layout_marginTop="45dp"
+        android:text=" Birthday (MM/YY)"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/months"
-        app:layout_constraintEnd_toStartOf="@+id/grade"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/greetingMessage"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cellNumber" />
+        app:layout_constraintTop_toTopOf="@+id/teachersName" />
 
     <Button
         android:id="@+id/join2"
@@ -126,36 +111,30 @@
         android:layout_marginEnd="16dp"
         android:text="Join"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/greetingMessage"
-        app:layout_constraintTop_toBottomOf="@+id/grade" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
         android:id="@+id/emergencyInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="68dp"
         android:layout_marginStart="16dp"
         android:ems="10"
         android:hint="Emergency Info"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/greetingMessage"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/months" />
 
     <TextView
         android:id="@+id/greetingMessage"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="26dp"
-        android:layout_marginEnd="89dp"
-        android:layout_marginStart="16dp"
+        android:layout_width="175dp"
+        android:layout_height="77dp"
+        android:layout_marginBottom="45dp"
+        android:layout_marginTop="48dp"
         android:textColor="@android:color/holo_red_dark"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/join2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emergencyInfo" />
+        app:layout_constraintBottom_toTopOf="@+id/join2"
+        app:layout_constraintStart_toStartOf="@+id/emergencyInfo"
+        app:layout_constraintTop_toTopOf="@+id/emergencyInfo" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
