moved necessary values to strings.xml file

--- a/app/src/main/res/layout/activity_edit_user_info.xml
+++ b/app/src/main/res/layout/activity_edit_user_info.xml
@@ -14,7 +14,7 @@
         android:layout_height="0dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
-        android:text="Edit Your Info"
+        android:text="@string/edit_your_info"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.003"
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
         android:ems="10"
-        android:hint="New Address"
+        android:hint="@string/new_address"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="@+id/updateHomeNumber"
         app:layout_constraintStart_toStartOf="@+id/updateHomeNumber"
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
-        android:text="Done"
+        android:text="@string/done"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/updateYear" />
@@ -51,7 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="3dp"
         android:ems="10"
-        android:hint="New Home Phone Number"
+        android:hint="@string/new_home_phone_number"
         android:inputType="number"
         app:layout_constraintBottom_toTopOf="@+id/updateCellNumber"
         app:layout_constraintEnd_toEndOf="@+id/updateCellNumber"
@@ -63,7 +63,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="New Cellphone Number"
+        android:hint="@string/new_cellphone_number"
         android:inputType="number"
         app:layout_constraintBottom_toTopOf="@+id/updateTeacher"
         app:layout_constraintEnd_toStartOf="@+id/updateGrade"
@@ -76,7 +76,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:ems="10"
-        android:hint="New Teacher's Name"
+        android:hint="@string/new_teacher_s_name_edit"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/updateBirthDay"
         app:layout_constraintEnd_toStartOf="@+id/updateGrade"
@@ -88,7 +88,7 @@
         android:id="@+id/updateBirthDay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=" Edit Birth Day (MM/YY)"
+        android:text="@string/edit_birth_day_mm_yy"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/updateMonth"
         app:layout_constraintStart_toStartOf="@+id/updateTeacher"
@@ -101,7 +101,7 @@
         android:layout_marginBottom="121dp"
         android:layout_marginLeft="16dp"
         android:ems="10"
-        android:hint="New Emergency Info"
+        android:hint="@string/new_emergency_info"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -148,7 +148,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="46dp"
         android:ems="10"
-        android:hint="New Name"
+        android:hint="@string/new_name"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/updateHomeNumber"
         app:layout_constraintEnd_toEndOf="@+id/updateAddress"
