--- a/app/src/main/res/layout/activity_parent_dash_messaging.xml
+++ b/app/src/main/res/layout/activity_parent_dash_messaging.xml
@@ -11,7 +11,7 @@
         android:id="@+id/txtMessagesNonEmergency"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Messages:"
+        android:text="@string/messages_parent_dash"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.05"
@@ -33,7 +33,7 @@
         android:id="@+id/txtEmergencyMessages"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Emergency messages will appear below"
+        android:text="@string/emergency_messages_will_appear_below"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
