--- a/app/src/main/res/layout/activity_parents_dashboard.xml
+++ b/app/src/main/res/layout/activity_parents_dashboard.xml
@@ -101,7 +101,7 @@
         android:id="@+id/btnViewUsersOnMap"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:text="View Users Location"
+        android:text="@string/view_users_location"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.07"
@@ -113,7 +113,7 @@
         android:id="@+id/btnParentMail"
         android:layout_width="157dp"
         android:layout_height="50dp"
-        android:text="Messages"
+        android:text="@string/messages"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.929"
