--- a/app/src/main/res/layout/activity_edit_child_info.xml
+++ b/app/src/main/res/layout/activity_edit_child_info.xml
@@ -14,7 +14,7 @@
         android:layout_height="43dp"
         android:layout_marginLeft="16dp"
         android:ems="10"
-        android:hint="New Address"
+        android:hint="@string/new_address"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/updateChildHomeNumber"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,7 +30,7 @@
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:text="Done"
+        android:text="@string/done"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -42,7 +42,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="New Home Phone Number"
+        android:hint="@string/new_home_phone_number"
         android:inputType="number"
         app:layout_constraintBottom_toTopOf="@+id/updateChildCellNumber"
         app:layout_constraintEnd_toEndOf="@+id/updateChildAddress"
@@ -54,7 +54,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="New Cellphone Number"
+        android:hint="@string/new_cellphone_number"
         android:inputType="number"
         app:layout_constraintBottom_toTopOf="@+id/updateChildHomeNumber"
         app:layout_constraintEnd_toEndOf="@+id/updateChildHomeNumber"
@@ -69,7 +69,7 @@
         android:layout_marginEnd="17dp"
         android:layout_marginStart="19dp"
         android:ems="10"
-        android:hint="New Teacher's Name"
+        android:hint="@string/new_teacher_s_name"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/updateChildBirthDay"
         app:layout_constraintEnd_toStartOf="@+id/updateChildGrade"
@@ -80,7 +80,7 @@
         android:id="@+id/updateChildBirthDay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="  Edit Birth Day (MM/YY)"
+        android:text="@string/edit_birth_day_mm_yy"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/updateChildMonth"
         app:layout_constraintStart_toStartOf="@+id/updateChildMonth"
@@ -92,7 +92,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="118dp"
         android:ems="10"
-        android:hint="New Emergency Info"
+        android:hint="@string/new_emergency_info"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/updateChildTeacher"
@@ -141,7 +141,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="41dp"
         android:ems="10"
-        android:hint="New Name"
+        android:hint="@string/new_name"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/updateChildYear"
         app:layout_constraintEnd_toEndOf="parent"
@@ -157,7 +157,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="180dp"
         android:layout_marginTop="16dp"
-        android:text="TextView"
+        android:text="@string/textview"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/updateChildTeacher"
         app:layout_constraintStart_toStartOf="@+id/updateChildName"
