--- a/app/src/main/res/layout/activity_parent_dash_user_info.xml
+++ b/app/src/main/res/layout/activity_parent_dash_user_info.xml
@@ -21,7 +21,7 @@
         android:id="@+id/txtUsersInGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Users in group"
+        android:text="@string/users_in_group"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.024"
