--- a/app/src/main/res/layout/activity_sign_up_optional_info.xml
+++ b/app/src/main/res/layout/activity_sign_up_optional_info.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="Optional Info"
+        android:text="@string/optional_info"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,7 +26,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="12dp"
         android:ems="10"
-        android:hint="Address"
+        android:hint="@string/address"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="45dp"
         android:ems="10"
-        android:hint="Teacher's Name"
+        android:hint="@string/teacher_s_name"
         android:inputType="textEmailAddress|textPersonName"
         app:layout_constraintEnd_toEndOf="@+id/cellNumber"
         app:layout_constraintStart_toStartOf="@+id/cellNumber"
@@ -58,7 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="41dp"
         android:ems="10"
-        android:hint="Home Phone Number"
+        android:hint="@string/home_phone_number"
         android:inputType="number"
         app:layout_constraintStart_toStartOf="@+id/getAddress"
         app:layout_constraintTop_toTopOf="@+id/getAddress" />
@@ -69,7 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="45dp"
         android:ems="10"
-        android:hint="Cellphone Number"
+        android:hint="@string/cellphone_number"
         android:inputType="number"
         app:layout_constraintStart_toStartOf="@+id/phoneNumber"
         app:layout_constraintTop_toTopOf="@+id/phoneNumber" />
@@ -97,7 +97,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="45dp"
-        android:text=" Birthday (MM/YY)"
+        android:text="@string/birthday_mm_yy"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="@+id/greetingMessage"
         app:layout_constraintStart_toStartOf="parent"
@@ -109,7 +109,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
-        android:text="Join"
+        android:text="@string/join_with_optional_info"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -119,7 +119,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:ems="10"
-        android:hint="Emergency Info"
+        android:hint="@string/emergency_info"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/months" />
